# ReconROS_Adapt

./: .gitignore  README.md  build.cfg  remote_build.sh  remote_get.sh
clients/sortdemo/: sort_runtimemeasurement.py
clients/throughput/: auswertung.csv  throughput.py
experiments/evaluation/2021-12-15_16-20/: inverse.csv  sort.csv
experiments/evaluation/2021-12-15_1620/: rr_inverse.csv
experiments/evaluation/2022-01-06_1733/: eval.py
experiments/evaluation/2022-01-06_1733/Default/: mnist.csv  sort.csv
experiments/evaluation/2022-01-06_1733/ReconROS/: inverse.csv  mnist.csv  sobel.csv  sort.csv
experiments/evaluation/2022-01-06_1944/: eval.py
experiments/evaluation/2022-01-06_1944/Default/: inverse.csv  sobel.csv
experiments/evaluation/2022-01-06_1944/ReconROS/: inverse.csv  (+3 more)
experiments/evaluation/2022-01-07_0738/: README
experiments/evaluation/2022-01-07_0932/: README  eval.py
experiments/standard_executor/mnist_msgs/: CMakeLists.txt
experiments/standard_executor/reference_application/: CMakeLists.txt  package.xml
experiments/standard_executor/reference_application/src/: main.cpp
experiments/standard_executor/reference_application/src/inverse/: inverse.c
experiments/standard_executor/reference_application/src/mnist/: mnist.cpp  rt_mnist.cpp
experiments/standard_executor/reference_application/src/periodic/: periodic.c
experiments/standard_executor/reference_application/src/sobel/: sobel.c
experiments/standard_executor/reference_application/src/sort/: sort.c
experiments/standard_executor/sorter_msgs/: CMakeLists.txt
experiments/standard_executor_client/: mnist.csv  rr_mnist.csv  rr_sobel.csv  rr_sort.csv  sobel.csv
experiments/standard_executor_client/evaluation/: eval.py
experiments/standard_executor_client/reference_application_inverse/: CMakeLists.txt  package.xml
experiments/standard_executor_client/reference_application_mnist/: CMakeLists.txt  package.xml
experiments/standard_executor_client/reference_application_periodic/: CMakeLists.txt  package.xml
experiments/standard_executor_client/reference_application_periodic/src/: main.cpp
experiments/standard_executor_client/reference_application_sobel/: CMakeLists.txt  package.xml
experiments/standard_executor_client/reference_application_sort/: CMakeLists.txt  package.xml
experiments/standard_executor_client/run_experiments/: CMakeLists.txt  package.xml
experiments/standard_executor_client/run_experiments/launch/: experiments.launch.py
src/application/: callbacklist.c  callbacklist.h  executor.c  executor.h  helpers.h  hw_executor.c  hw_executor.h  main.c  main.h  queue.c  queue.h  readylist.c  readylist.h  sw_executor.c  sw_executor.h
src/rt_fast/c/: fast.cpp
src/rt_fast/hls/: rt_fast.cpp
src/rt_inverse/c/: rt_inverse.c
src/rt_mnist/c/: rt_mnist.cpp
src/rt_mnist/hls/: rt_mnist.cpp
src/rt_orbslam/c/: rt_orbslam.cpp
src/rt_periodic/c/: rt_periodic.c
src/rt_periodic/hls/: rt_periodic.cpp  sha256.c
src/rt_sobel/c/: rt_sobel.c
src/rt_sobel/hls/: rt_sobel.cpp
src/rt_sortdemo/c/: sortdemo.c
src/rt_sortdemo/hls/: sortdemo.cpp
(+48 files in other folders)
