<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>reference_application</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <maintainer email="max-mustermann@web.de">Name</maintainer>
  <license>TODO: License declaration</license>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>mnist_msgs</build_depend>
  <build_depend>sorter_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>mnist_msgs</exec_depend>
  <exec_depend>sorter_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
