<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>run_experiments</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christianlienen@me.com">christian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>reference_application_inverse_client</exec_depend>
  <exec_depend>reference_application_inverse_mnist</exec_depend>
  <exec_depend>reference_application_inverse_sobel</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
